# ISA-Struktury-Danych

./: ArrayList.cpp  ArrayList.h  CMakeLists.txt  DoublyList.cpp  List.cpp  List.h  Node.cpp  Node.h  SNode.h  TailList.cpp  TailList.h  main.cpp  tests.cpp  tests.h  ui.cpp  ui.h
Project 1 - Listy/: ArrayList.h  CMakeLists.txt  DNode.h  README.md  TailList.cpp  main.cpp  tests.h
Projekt 1 - Listy/: ArrayList.cpp  ArrayList.h  DoublyList.cpp  DoublyList.h  List.cpp  List.h  TailList.cpp  TailList.h  main.cpp  tests.cpp  tests.h  ui.cpp
Projekt2 - Kolejki Piorytetowe/: ArrayPQueue.cpp  ArrayPQueue.h  CMakeLists.txt  PQheap.cpp  PQheap.h  main.cpp  test.cpp  test.h
Projekt3 - Slowniki/: CMakeLists.txt  HashTable.h  HashTable_Bucket.cpp  HashTable_Bucket.h  HashTable_Cuckoo.cpp  HashTable_Cuckoo.h  HashTable_Open.cpp  HashTable_Open.h  main.cpp  tests.cpp  tests.h
